deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-project
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-project
  template:
    metadata:
      labels:
        app: my-project
    spec:
      containers:
        - name: my-project
          image: klenroixtia/my-project:v1
          ports:
            - containerPort: 3000
          securityContext:
            runAsNonRoot: true  # Pod'un root kullanıcı olarak çalışmasını engeller
            readOnlyRootFilesystem: true  # ReadOnly root dosya sistemi
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "0.5"
              memory: "512Mi"
